<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:padding="10dp"
    tools:context=".book.MyCocktail">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:labelFor="@id/cktName"
            android:text="@string/nomeMyCkt"
            android:textSize="16sp"
            android:textStyle="bold" />

        <EditText
            android:id="@+id/cktName"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:autofillHints="name"
            android:inputType="text"
            android:minHeight="48dp" />

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/imageMyCkt"
            android:textSize="16sp"
            android:textStyle="bold" />

        <ImageView
            android:id="@+id/imgUpload"
            android:layout_width="150dp"
            android:layout_height="150dp"
            android:layout_gravity="center_horizontal"
            android:background="@drawable/origin_custom_shape"
            android:contentDescription="Cocktail Image" />

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:labelFor="@id/AzioneSpinner"
            android:text="@string/ingredientiMyCkt"
            android:textSize="16sp"
            android:textStyle="bold" />

        <Spinner
            android:id="@+id/AzioneSpinner"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:minHeight="48dp" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:baselineAligned="false"
            android:orientation="horizontal">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:orientation="vertical">

                <TextView
                    android:id="@+id/labelIngredient"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:labelFor="@id/ingredientCkt"
                    android:text="@string/quantita"
                    android:textStyle="bold" />

                <Spinner
                    android:id="@+id/ingredientCkt"
                    android:layout_width="match_parent"
                    android:layout_height="48dp" />
            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:orientation="vertical">

                <TextView
                    android:id="@+id/labelStrum"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:labelFor="@id/strumCkt"
                    android:text="@string/unità"
                    android:textStyle="bold" />

                <Spinner
                    android:id="@+id/strumCkt"
                    android:layout_width="match_parent"
                    android:layout_height="48dp" />
            </LinearLayout>

        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="horizontal">

            <androidx.appcompat.widget.AppCompatButton
                android:id="@+id/AddIng"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:background="@drawable/my_add_button"
                android:text="@string/aggiungi_ingrediente"
                android:textColor="@color/text_add_button" />

        </LinearLayout>

        <com.example.cocktailmania.utility.NonScrollListView
            android:id="@+id/MyIngList"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_marginTop="5dp"
            android:divider="#00000000"
            android:dividerHeight="2dp"/>

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            android:labelFor="@id/StrumSpinner"
            android:text="@string/strumentiMyCkt"
            android:textSize="16sp"
            android:textStyle="bold" />

        <Spinner
            android:id="@+id/StrumSpinner"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:minHeight="48dp" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="horizontal">

            <androidx.appcompat.widget.AppCompatButton
                android:id="@+id/AddStrum"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:background="@drawable/my_add_button"
                android:text="@string/aggiungi_strumento"
                android:textColor="@color/text_add_button" />

        </LinearLayout>

        <com.example.cocktailmania.utility.NonScrollListView
            android:id="@+id/MyStrumList"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_marginTop="5dp"
            android:divider="#00000000"
            android:dividerHeight="2dp"/>

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            android:labelFor="@id/GradeSpinner"
            android:text="@string/gradazione_alcolicaMaius"
            android:textSize="16sp"
            android:textStyle="bold" />

        <Spinner
            android:id="@+id/GradeSpinner"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:minHeight="48dp" />

        <androidx.appcompat.widget.AppCompatButton
            android:id="@+id/AfterButton"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@drawable/my_go_button"
            android:text="@string/go"
            android:textColor="@color/text_go_button" />

    </LinearLayout>
</ScrollView>