<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    android:id="@+id/init"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:fillViewport="true"
    android:textAlignment="viewStart">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">

        <TextView
            android:id="@+id/CocktailTitle"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center|center_vertical"
            android:textSize="28sp"
            android:textStyle="bold" />

        <ImageView
            android:id="@+id/imgStrum"
            android:layout_width="200dp"
            android:layout_height="200dp"
            android:layout_gravity="center"
            android:layout_marginTop="10dp"
            android:contentDescription="@string/cocktailImageDescription" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:layout_marginTop="10dp">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:orientation="horizontal"
                android:paddingStart="10dp"
                android:paddingTop="2dp"
                android:paddingEnd="10dp">

                <TextView
                    android:id="@+id/GradeLabel"
                    android:layout_width="120dp"
                    android:layout_height="wrap_content"
                    android:labelFor="@id/AlcolicGrade"
                    android:text="@string/grado_alcolico"
                    android:textSize="16sp"
                    android:textStyle="bold" />

                <TextView
                    android:id="@+id/AlcolicGrade"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:textAlignment="viewStart"
                    android:textSize="16sp" />
            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:orientation="horizontal"
                android:paddingStart="10dp"
                android:paddingTop="2dp"
                android:paddingEnd="10dp">

                <TextView
                    android:id="@+id/OriginLabel"
                    android:layout_width="120dp"
                    android:layout_height="wrap_content"
                    android:labelFor="@id/CktOrigin"
                    android:text="@string/origine_label"
                    android:textSize="16sp"
                    android:textStyle="bold" />

                <TextView
                    android:id="@+id/CktOrigin"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:textAlignment="viewStart"
                    android:textSize="16sp" />
            </LinearLayout>

            <TextView
                android:id="@+id/StrumLabel"
                android:layout_width="wrap_content"
                android:layout_height="0dp"
                android:layout_weight="1"
                android:paddingStart="10dp"
                android:paddingTop="5dp"
                android:paddingEnd="10dp"
                android:text="@string/strumenti_label"
                android:textSize="20sp"
                android:textStyle="bold" />

            <com.example.cocktailmania.utility.NonScrollListView
                android:id="@+id/list_instruments"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:layout_marginTop="5dp"
                android:divider="#00000000"
                android:dividerHeight="2dp"
                android:orientation="vertical"
                android:paddingStart="10dp"
                android:paddingEnd="10dp" />


        </LinearLayout>

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            android:labelFor="@id/IngredientList"
            android:text="@string/ingredienti"
            android:textAlignment="center"
            android:textSize="20sp"
            android:textStyle="bold" />

        <com.example.cocktailmania.utility.NonScrollListView
            android:id="@+id/IngredientList"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_marginTop="5dp"
            android:divider="#00000000"
            android:dividerHeight="3dp"
            android:orientation="vertical"
            android:paddingStart="10dp"
            android:paddingEnd="10dp" />

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_marginTop="10dp"
            android:labelFor="@id/StepPrep"
            android:text="@string/PrepTitle"
            android:textAlignment="center"
            android:textSize="20sp"
            android:textStyle="bold" />

        <com.example.cocktailmania.utility.NonScrollListView
            android:id="@+id/StepPrep"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_marginTop="5dp"
            android:divider="#00000000"
            android:dividerHeight="4dp"
            android:orientation="vertical"
            android:paddingStart="10dp"
            android:paddingEnd="10dp"
            android:paddingBottom="10dp" />

        <androidx.appcompat.widget.AppCompatButton
            android:id="@+id/deleteCocktailButton"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="5dp"
            android:background="@drawable/my_delete_cocktail_button"
            android:text="@string/cancella_cocktail"
            android:textColor="#FF0000"
            android:visibility="gone" />

    </LinearLayout>
</ScrollView>